@@ -2,6 +2,7 @@ Revision history for Log-Abstraction
 
 0.26
 	Added testing dashboard on GitHub Pages
+	Added croak_on_error
 
 0.25	Sun Aug 17 20:41:38 EDT 2025
 	Added is_debug for consistency with Log::Any
